--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -19,16 +19,16 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd documentation
+          cd silogen-public-docs
           npm ci
 
       - name: Build website
         run: |
-          cd documentation
+          cd silogen-public-docs
           npm run build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./documentation/build
+          publish_dir: ./silogen-public-docs/build
